add get user and create common header

--- a/src/sass/components/auth.scss
+++ b/src/sass/components/auth.scss
@@ -205,3 +205,8 @@ a:hover {
     color: rgba(103, 58, 183, 0.7);
   }
 }
+
+.form-switch {
+  padding-top: 0.4em;
+  padding-left: 3.5em !important;
+}
