--- a/src/sass/components/auth.scss
+++ b/src/sass/components/auth.scss
@@ -1,174 +1,140 @@
-////login and register.scss
-
+// auth.scss
+@import "../constants/variables";
+@import "../constants/mixins";
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400");
 
 * {
   margin: 0;
   padding: 0;
 }
+
 a,
 a:hover {
   text-decoration: none;
 }
+
 .myform-area {
   overflow: hidden;
   padding: 60px 0;
-  background: #f4fffe;
+  background: $background-color;
   position: relative;
   padding-top: 40px;
   padding-bottom: 100px;
-}
-.myform-area .form-area {
-  position: relative;
-  background: rgba(103, 58, 183, 0.7);
-  width: 100%;
-  //   height: 400px;
-  overflow: hidden;
-  box-shadow: 0 0 40px 0 #e1e1e1;
-  border-radius: 10px;
-}
 
-.myform-area .form-area .form-content,
-.myform-area .form-area .form-input {
-  position: relative;
-  width: 50%;
-  height: 100%;
-  float: left;
-  box-sizing: border-box;
-}
+  .form-area {
+    position: relative;
+    background: $primary-color;
+    width: 100%;
+    overflow: hidden;
+    @include box-shadow;
+    @include border-radius;
+  }
 
-.myform-area .form-area .form-content {
-  width: 50%;
-  padding: 40px 30px;
-}
+  .form-content,
+  .form-input {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    float: left;
+    box-sizing: border-box;
 
-.myform-area .form-area .form-content h2 {
-  color: #fff;
-}
-.myform-area .form-area .form-content p {
-  color: #fff;
-}
-.myform-area .form-area .form-content ul {
-  margin-top: 50px;
-}
+    &.form-content {
+      padding: 40px 30px;
+      h2,
+      p {
+        color: $font-color-light;
+      }
+      ul {
+        margin-top: 50px;
+        li {
+          display: inline-block;
+          margin-right: 10px;
+        }
+      }
+    }
 
-.myform-area .form-area .form-content ul li {
-  display: inline-block;
-  margin-right: 10px;
-}
-.myform-area .form-area .form-content a i {
-  margin-right: 10px;
-}
+    &.form-input {
+      background-color: white;
+      padding: 40px 30px;
+      @include box-shadow;
 
-.myform-area .form-area .form-input {
-  background-color: white;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 40px 0 #e1e1e1;
-}
-.myform-area .form-area .form-input {
-  width: 50%;
-  background: #fff;
-  padding: 40px 30px;
-}
+      h2 {
+        margin-bottom: 20px;
+        color: $secondary-color;
+      }
 
-.myform-area .form-area .form-input h2 {
-  margin-bottom: 20px;
-  color: #07315b;
-}
+      input,
+      textarea {
+        height: 55px;
+        padding: 25px 0px 0 0;
+        width: 100%;
+        box-sizing: border-box;
+        outline: none;
+        border: none;
+        border-bottom: 2px solid $border-color;
+        color: $secondary-color;
 
-.myform-area .form-area .form-input input {
-  position: relative;
-  height: 55px;
-  padding: 25px 0px 0 0;
-}
-.myform-area .form-area .form-input textarea {
-  height: 120px;
-  padding: 25px 0px 0 0;
-}
+        &:focus,
+        &:valid {
+          border-bottom: 2px solid $primary-color;
+        }
+      }
 
-.myform-area .form-area .form-input input,
-.myform-area .form-area .form-input textarea {
-  //   text-transform: capitalize;
-  width: 100%;
-  box-sizing: border-box;
-  outline: none;
-  border: none;
-  border-bottom: 2px solid #e1e1e1;
-  color: #07315b;
-}
-.myform-area .form-area .form-input form .form-group {
-  position: relative;
-}
-.myform-area .form-area .form-input form .form-group label {
-  //   display: block;
-  position: absolute;
-  text-transform: capitalize;
-  top: 20px;
-  left: 0;
-  pointer-events: none;
-  font-size: 14px;
-  color: #595959;
-  margin-bottom: 0;
-  transition: all 0.6s;
-  //   opacity: 1;
-}
+      label {
+        position: absolute;
+        text-transform: capitalize;
+        padding-top: 6px;
+        left: 30px;
+        pointer-events: none;
+        font-size: 14px;
+        color: #595959;
+        margin-bottom: 0;
+        @include transition(0.6s);
 
-.myform-area .form-area .form-input input::placeholder {
-  font-size: 12px;
-}
+        input:focus ~ &,
+        textarea:focus ~ &,
+        input:valid ~ &,
+        textarea:valid ~ & {
+          @include form-label-focus;
+        }
+      }
+    }
 
-.myform-area .form-area .form-input input:focus ~ label,
-.myform-area .form-area .form-input textarea:focus ~ label,
-.myform-area .form-area .form-input input:valid ~ label,
-.myform-area .form-area .form-input textarea:valid ~ label {
-  top: 4px;
-  // opacity: 0;
-  left: 0;
-  color: rgba(103, 58, 183);
-  font-size: 14px;
-  color: #07315b;
-  font-weight: 500;
-}
-.myform-area .form-area .form-input input:focus,
-.myform-area .form-area .form-input textarea:focus,
-.myform-area .form-area .form-input input:valid,
-.myform-area .form-area .form-input textarea:valid {
-  border-bottom: 2px solid rgba(103, 58, 183);
-}
-.myform-area .form-area .form-text {
-  margin-top: 30px;
-}
-.myform-area .form-area .form-text span a {
-  color: rgba(103, 58, 183);
-}
-.myform-area .form-area .myform-button {
-  margin-top: 30px;
-}
-.myform-area .form-area .myform-button .myform-btn {
-  width: 100%;
-  height: 50px;
-  font-size: 17px;
-  background: rgba(103, 58, 183);
-  border: none;
-  border-radius: 50px;
-  color: #fff;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.myform-area .form-area .myform-button .myform-btn:hover {
-  background: #07315b;
+    .myform-button {
+      margin-top: 30px;
+      .myform-btn {
+        width: 100%;
+        height: 50px;
+        font-size: 17px;
+        background: $primary-color;
+        border: none;
+        border-radius: 50px;
+        color: $font-color-light;
+        cursor: pointer;
+        @include transition;
+
+        &:hover {
+          background: $secondary-color;
+        }
+      }
+    }
+
+    .form-text {
+      margin-top: 30px;
+      span a {
+        color: $primary-color;
+      }
+    }
+  }
 }
 
 .bg-blue {
   --bs-bg-opacity: 1;
-  background-color: rgb(154 111 230) !important;
+  background-color: rgba($primary-color-solid, 1) !important;
 }
 
 .bg-dark-blue {
-  background: rgb(103, 58, 183) !important;
+  background: $primary-color-solid !important;
 }
 
 .error {
@@ -178,35 +144,41 @@ a:hover {
 }
 
 .btn-outline-success {
-  color: rgba(0, 0, 0, 1) !important ;
-  border-color: rgba(103, 58, 183, 0.7) !important;
+  color: $font-color-search !important;
+  border-color: $border-color-one !important;
+
+  &:hover {
+    background-color: $primary-color-solid-one !important;
+  }
 }
 
-.btn-outline-success:hover {
-  background-color: rgb(103, 58, 183) !important;
-}
-
-.heading-noaccount-login {
+.heading-noaccount-login,
+.btn-register-login {
   display: block;
   font-size: 17px;
   font-weight: 700;
   letter-spacing: 2px;
-}
 
-.btn-register-login {
-  color: rgb(103, 58, 183);
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 8px 10px;
-  font-style: italic;
-  font-weight: bold;
-  text-decoration: underline;
-  &:hover {
-    color: rgba(103, 58, 183, 0.7);
+  &.btn-register-login {
+    color: $primary-color-solid;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 8px 10px;
+    font-style: italic;
+    font-weight: bold;
+    text-decoration: underline;
+
+    &:hover {
+      color: $primary-color;
+    }
   }
 }
 
 .form-switch {
   padding-top: 0.4em;
   padding-left: 3.5em !important;
+}
+
+.navbar-brand {
+  color: $font-color-light !important;
 }
