--- a/src/sass/components/welcome.scss
+++ b/src/sass/components/welcome.scss
@@ -1,3 +1,7 @@
+// welcome.scss
+@import "../constants/variables";
+@import "../constants/mixins";
+
 .bg-body-tertiary {
   --bs-bg-opacity: 1;
   background-color: rgba(
@@ -14,22 +18,24 @@
   margin-top: 8rem;
 }
 
-.heading-noaccount {
+.heading-noaccount,
+.btn-register {
   display: block;
   font-size: 18px;
   font-weight: 700;
   letter-spacing: 2.5px;
-}
 
-.btn-register {
-  color: rgb(103, 58, 183);
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 8px 10px;
-  font-style: italic;
-  font-weight: bold;
-  text-decoration: underline;
-  &:hover {
-    color: rgba(103, 58, 183, 0.7);
+  &.btn-register {
+    color: $primary-color-solid;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 8px 10px;
+    font-style: italic;
+    font-weight: bold;
+    text-decoration: underline;
+
+    &:hover {
+      color: $primary-color;
+    }
   }
 }
